--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   </head>
   <script type="application/javascript">
   </script>
-  <body>
-    <main id="main"></main>
+  <body class id = main> 
+   
     <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
